After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 664751 - Can't find web apps
Can't find web apps
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
3.2.x (obsolete)
Other Linux
: Normal major
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-11-24 18:34 UTC by Kevin Raymond
Modified: 2011-11-30 18:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
webapps: ensure the webapps are shown in the shell (1.95 KB, patch)
2011-11-30 17:45 UTC, Claudio Saavedra
committed Details | Review

Description Kevin Raymond 2011-11-24 18:34:22 UTC
Hi, 
Browsing about:applications gives me 3 installed applications, but I could not find them on the applications view, neither with ALT+TAB. Sounds like a bug to me.
I've seen this feature working perfectly on other computers.

Once saving as a web app, I get a notification "web application ready" (or something like that), but then, the current epiphany windows still the same… What's wrong?

Where could I find more log?

I am running Fedora 16, epiphany-3.2.1-2 in 64bits.
Comment 1 Pieter 2011-11-29 09:14:38 UTC
I can confirm this. I have one application in about:applications, but can't find it in the application view

Also running Fedora 16 64bit. Epiphany version: 3.2.1-2
Comment 2 Xan Lopez 2011-11-30 11:19:47 UTC
Is there a valid .desktop file link in ~/.local/share/applications for the app(s)? Something like epiphany-<appname>-<hash number>.desktop. That's where the shell looks for the app.
Comment 3 Pieter 2011-11-30 11:25:32 UTC
No, ls -A ~/.local/share/applications returns only mimeapps.list
Comment 4 Xan Lopez 2011-11-30 11:29:37 UTC
I suppose it will be the case since you can see the app in about:applications, but can you confirm that the .desktop file is in your ~/.gnome2/epiphany/app-epiphany-<appname>-<hash> directory?

Anyway, it seems the link was not created properly in the shell applications dir. Not sure what could have happened. Can you try removing the application and creating it again and see if the same thing happens?
Comment 5 Kevin Raymond 2011-11-30 11:34:27 UTC
Same here, I don't have any epiphany files under ~/.local/share/applications (some others).
But yes, I've got ~/.gnome2/epiphany/app-epiphany-[…].desktop files.

Containing for example (with the first blank line)

<pre>

[Desktop Entry]
Name=rfid
Exec=epiphany --application-mode --profile="/home/shaiton/.gnome2/epiphany/app-epiphany-rfid-a8ef3f5a35edecbcb0ed56f55005b9d525edd8f1" file:///home/shaiton/rfid/controller/doc/html/index.html
StartupNotification=true
Terminal=false
Type=Application
Icon=/home/shaiton/.gnome2/epiphany/app-epiphany-rfid-a8ef3f5a35edecbcb0ed56f55005b9d525edd8f1/app-icon.png
StartupWMClass=epiphany-rfid-a8ef3f5a35edecbcb0ed56f55005b9d525edd8f1
</pre>

Should I create a symlink somewhere, to check?
Comment 6 Kevin Raymond 2011-11-30 11:35:26 UTC
(In reply to comment #4)
 Can you try removing the application
> and creating it again and see if the same thing happens?

Already tried, I've got 4 apps…
Comment 7 Pieter 2011-11-30 11:49:12 UTC
(In reply to comment #4)
> I suppose it will be the case since you can see the app in about:applications,
> but can you confirm that the .desktop file is in your
> ~/.gnome2/epiphany/app-epiphany-<appname>-<hash> directory?
> 
> Anyway, it seems the link was not created properly in the shell applications
> dir. Not sure what could have happened. Can you try removing the application
> and creating it again and see if the same thing happens?

I've also got the folder and .desktop file.
Removed the the app folder in ~/.gnome2/epiphany/, tried making a new app and it works! I now also have a .desktop file in ~/.local/share/applications/
Comment 8 Kevin Raymond 2011-11-30 12:27:36 UTC
(In reply to comment #7)
> I've also got the folder and .desktop file.
> Removed the the app folder in ~/.gnome2/epiphany/, tried making a new app and
> it works! I now also have a .desktop file in ~/.local/share/applications/

Doing the same does not work for me :(
Comment 9 Claudio Saavedra 2011-11-30 14:17:04 UTC
I think I found the reason:

  /* Create a symlink in XDG_DATA_DIR/applications for the Shell to
   * pick up this application. */
  link_path = g_build_filename (g_get_user_data_dir (), "applications", filename, NULL);
  link = g_file_new_for_path (link_path);
  g_free (link_path);
  g_file_make_symbolic_link (link, desktop_file_path, NULL, NULL);
  g_object_unref (link);
  g_free (filename);

We are not creating the path and it seems that the symbolic link creation fails when there are no locally installed applications. I'll cook a patch.
Comment 10 Kevin Raymond 2011-11-30 15:01:33 UTC
oh nice, thanks! 
creating the ~/.local/share/applications works (let the symlink creation).
(but the default icon is wrong (i.e. could not find the screenshot)).
Comment 11 Claudio Saavedra 2011-11-30 17:45:00 UTC
Created attachment 202465 [details] [review]
webapps: ensure the webapps are shown in the shell

Make sure the applications directory in XDG_DATA_HOME exists
before creating a symlink for the application desktop file.
Comment 12 Xan Lopez 2011-11-30 18:06:48 UTC
Review of attachment 202465 [details] [review]:

r=me
Comment 13 Claudio Saavedra 2011-11-30 18:21:15 UTC
Pushed to master and gnome-3-2.