webapps: ensure the webapps are shown in the shell

Make sure the applications directory in XDG_DATA_HOME exists
before creating a symlink for the application desktop file.

https://bugzilla.gnome.org/show_bug.cgi?id=664751